--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
                     <h2><u>Directions</u></h2><br>
                     <ul>
                         <li>** Press SPACEBAR to Begin! **</li><br>
-                        <li>** Try to guess the hidden word **</li><br>
-                        <li>** Type the letters you would like to try **</li><br>
-                        <li>** Letters already guessed are displayed below **</li><br>
-                        <li>** Upon revealing the word, you will achieve self-actualization **</li><br>
-                        <li>** When you finish a word, press SPACEBAR again to begin a new word **</li>
+                        <li>** Try to figure out the hidden word by typing its letters **</li><br>
+                        <li>** All possibilities are listed on the left.  Letters already used are below **</li><br>
+                        <li>** Upon revealing the word, you will be rewarded with great satisfaction! **</li><br>
+                        <li>** When the round is over, press SPACEBAR again to begin a new word **</li>
                     </ul>
                     </div>
                     
