added soundclip for wins

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
                         Letters Guessed:
                         <div id="spent_letters"></div>
                     </div>
-                    <div id="result"></div>
+
+                    <div id="result">
+                        <audio id="sound_clip">
+                            <source src="assets/media/Count.mp3" type="audio/mpeg">
+                        </audio>
+                    </div>
 
                 </div>
             </div>
